删除测试依赖包

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.9.1",
-    "axios": "^0.18.0yar",
+    "axios": "^0.18.0",
     "bizcharts": "^3.2.2",
     "classnames": ">=2.0.0",
     "moment": "^2.20.1",
@@ -85,22 +85,10 @@
     "glob": "^7.0.3",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^3.0.6",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.5",
-    "karma-coveralls": "^1.1.2",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
     "less": "^2.7.1",
     "less-loader": "^4.1.0",
     "lodash": "^4.11.1",
     "lodash-webpack-plugin": "^0.11.5",
-    "mocha": "^2.5.3",
     "output-file-sync": "^1.1.1",
     "postcss-loader": "^2.0.9",
     "rimraf": "^2.5.2",
